# inspection_algorithm_pc

./: CMakeLists.txt
audits/audit_0/: holes_dense0.txt  rangeImage.txt
audits/audit_1/: holes_dense1.txt  rangeImage.txt
audits/audit_2/: holes_dense2.txt  rangeImage.txt
audits/audit_3/: holes_dense3.txt  rangeImage.txt
audits/audit_4/: holes_dense4.txt  rangeImage.txt
extra/: arrow_issue (copy).txt  arrow_issue.txt  bb.txt  boxfilter.txt  extra_code.cpp  find_correspondences.cpp  show_detected_holes  smooth.txt
extra/dataset_pointclouds/: 0_rangeImage_1.json  1_rangeImage_1.json  drillTargets_cluster_1.txt  drillTargets_cluster_1_newquartenion.txt  drill_tcp_pose.txt  sparse_scan.pcd
extra/quar/: normals.txt  targets.txt
src/: data_type.h  helper.h  inspection_modular.cpp  main.cpp
